--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
+
 <!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Plomero Gasista El Líder | Plomería y Gas en Saavedra, Núñez, Belgrano y zonas cercanas</title>
-  <meta name="description" content="Plomero y gasista matriculado en Saavedra, Núñez, Belgrano, Villa Urquiza, Villa Pueyrredón, Vicente López, Olivos, Martínez, Villa Adelina y toda CABA. Urgencias y mantenimiento integral.">
-  <meta name="robots" content="index,follow">
+  <title>Plomero El Líder | Servicios de agua y gas</title>
+  <meta name="description" content="Plomero El Líder - Empresa familiar con más de 45 años. Servicios de plomería y gas en CABA y alrededores. Reparaciones, instalaciones y urgencias.">
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="estilos.css">
 </head>
@@ -14,59 +14,89 @@
     <div class="container header-inner">
       <div class="logo">
         <h1>Plomero El Líder</h1>
-        <p class="tag">Más de 45 años de experiencia</p>
+        <p class="tag">Empresa familiar con más de 45 años</p>
       </div>
       <nav class="nav">
-        <a class="btn call" href="tel:1136663959">Llamar</a>
         <a class="btn wa" href="https://wa.me/1136663959" target="_blank" rel="noreferrer">WhatsApp</a>
       </nav>
     </div>
   </header>
 
-  <section class="hero">
-    <div class="container">
-      <h2>Plomero en CABA — Instalaciones y reparaciones de plomería</h2>
-      <p class="lead">Empresa familiar con más de 45 años de experiencia. Realizamos todo tipo de instalaciones y reparaciones de plomería en domicilios, comercios y edificios. Atención en CABA y alrededores. Consultá disponibilidad.</p>
+  <section class="hero hero-dark">
+    <div class="carousel">
+      <div class="slide"><img src="images/foto1.jpg" alt="Trabajo 1"></div>
+      <div class="slide"><img src="images/foto2.jpg" alt="Trabajo 2"></div>
+      <div class="slide"><img src="images/foto3.jpg" alt="Trabajo 3"></div>
+      <div class="slide"><img src="images/foto4.jpg" alt="Trabajo 4"></div>
+    </div>
+    <div class="hero-text">
+      <h2>Plomero El Líder — Servicios de agua y gas en CABA</h2>
+      <p>Empresa familiar con más de 45 años de experiencia. Instalaciones y reparaciones de plomería en domicilios, comercios y edificios.</p>
       <a class="cta" href="https://wa.me/1136663959" target="_blank" rel="noreferrer">Contactar por WhatsApp</a>
     </div>
   </section>
 
-  <section class="services container">
-    <h3>Servicios principales</h3>
-    <ul class="service-list">
-      <li><a href="https://wa.me/1136663959" target="_blank" rel="noreferrer"><strong>Reparación de pérdidas y filtraciones</strong><br>Detección y solución rápida de goteras y fugas.</a></li>
-      <li><a href="https://wa.me/1136663959" target="_blank" rel="noreferrer"><strong>Cambio de grifería y accesorios</strong><br>Instalación y reemplazo de grifos, duchas y válvulas.</a></li>
-      <li><a href="https://wa.me/1136663959" target="_blank" rel="noreferrer"><strong>Instalación y mantenimiento de sanitarios</strong><br>Colocación de inodoros, mochilas, tanques y bombas.</a></li>
-      <li><a href="https://wa.me/1136663959" target="_blank" rel="noreferrer"><strong>Instalación de cañerías de agua y desagüe</strong><br>Obras nuevas y reformas.</a></li>
-      <li><a href="https://wa.me/1136663959" target="_blank" rel="noreferrer"><strong>Servicio de gas y calefacción</strong><br>Termotanques, calefones, cocinas y revisión de cañerías de gas.</a></li>
-      <li><a href="https://wa.me/1136663959" target="_blank" rel="noreferrer"><strong>Mantenimiento preventivo</strong><br>Revisiones periódicas y mantenimiento para evitar emergencias.</a></li>
-    </ul>
-  </section>
+  <main class="container main-content">
+    <section id="servicios" class="services">
+      <h3>Servicios</h3>
+      <ul>
+        <li>Reparación de pérdidas y filtraciones</li>
+        <li>Cambio de grifería y accesorios</li>
+        <li>Instalación y mantenimiento de sanitarios</li>
+        <li>Instalación de cañerías de agua y desagüe</li>
+        <li>Servicio de gas: termotanques, calefones y cocinas</li>
+        <li>Mantenimiento preventivo</li>
+      </ul>
+    </section>
 
-  <section class="zones container">
-    <h3>Zonas de trabajo</h3>
-    <p>Trabajamos en: Saavedra, Nuñez, Belgrano, Villa Urquiza, Villa Pueyrredón, Vicente López, Olivos, Martínez, Villa Adelina, CABA. Consultá disponibilidad por WhatsApp.</p>
-  </section>
+    <section id="zonas" class="zones">
+      <h3>Zonas de trabajo</h3>
+      <p>Trabajamos en Saavedra, Núñez, Belgrano, Villa Urquiza, Villa Pueyrredón, Vicente López, Olivos, Martínez, Villa Adelina y toda CABA. Consultá disponibilidad.</p>
+    </section>
 
-  <section class="contact container">
-    <h3>Contacto</h3>
-    <p>Dirección: Ramallo 2772, CABA</p>
-    <p>Teléfono: <a href="tel:1136663959">1136663959</a></p>
-    <p>WhatsApp: <a href="https://wa.me/1136663959" target="_blank" rel="noreferrer">1136663959</a></p>
-    <a class="cta" href="https://wa.me/1136663959" target="_blank" rel="noreferrer">Enviar mensaje por WhatsApp</a>
-  </section>
+    <section id="contacto" class="contact">
+      <h3>Contacto</h3>
+      <p>Dirección: Ramallo 2772, CABA</p>
+      <p>WhatsApp / Teléfono: <a href="https://wa.me/1136663959">11 3666-3959</a></p>
+      <div class="socials">
+        <a href="https://www.facebook.com/share/1KFZrLqP61/" target="_blank" rel="noreferrer">Facebook</a> •
+        <a href="https://www.instagram.com/plomero.lider" target="_blank" rel="noreferrer">Instagram</a>
+      </div>
+      <div class="map">
+        <iframe src="https://www.google.com/maps?q=Ramallo+2772+CABA&output=embed" width="100%" height="260" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+    </section>
+  </main>
 
   <footer class="footer">
     <div class="container">
-      <p>Plomero El Líder — Empresa familiar con más de 45 años de experiencia. Ramallo 2772, CABA.</p>
+      <p>Plomero El Líder — Empresa familiar con más de 45 años de experiencia. Atención en CABA y alrededores.</p>
       <p>© Plomero El Líder - 2025</p>
     </div>
   </footer>
 
-  <!-- Botón flotante WhatsApp -->
-  <a class="whatsapp-float" href="https://wa.me/1136663959" target="_blank" rel="noreferrer" aria-label="WhatsApp">
-    💬
-  </a>
+  <a class="whatsapp-float" href="https://wa.me/1136663959" target="_blank" rel="noreferrer" aria-label="WhatsApp">💬</a>
 
+  <script>
+  (function(){
+    const slides = document.querySelectorAll('.carousel .slide');
+    let cur = 0;
+    function show(i){
+      slides.forEach((s,idx)=> s.style.opacity = (idx===i)? '1' : '0');
+    }
+    function next(){
+      cur = (cur+1) % slides.length;
+      show(cur);
+    }
+    slides.forEach(s=>{
+      s.style.position='absolute';
+      s.style.top=0; s.style.left=0; s.style.width='100%';
+      s.style.transition='opacity 0.8s ease';
+      s.style.opacity='0';
+    });
+    if(slides[0]) slides[0].style.opacity='1';
+    setInterval(next, 3500);
+  })();
+  </script>
 </body>
 </html>
