--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <p class="tag">Empresa familiar con más de 45 años</p>
       </div>
       <nav class="nav">
-        <a class="btn wa" href="https://wa.me/1136663959" target="_blank" rel="noreferrer">WhatsApp</a>
-      </nav>
+        <a href="https://wa.me/5491136663959" target="_blank" rel="noreferrer">WhatsApp</a>
     </div>
   </header>
 
