--- a/index.html
+++ b/index.html
@@ -1,101 +1,18 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Plomero El Líder | Servicios de agua y gas</title>
-  <meta name="description" content="Plomero El Líder - Empresa familiar con más de 45 años. Servicios de plomería y gas en CABA y alrededores. Reparaciones, instalaciones y urgencias.">
-  <link rel="icon" href="favicon.png">
-  <link rel="stylesheet" href="estilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Plomero Gasista – El Líder</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="header">
-    <div class="container header-inner">
-      <div class="logo">
-        <h1>Plomero El Líder</h1>
-        <p class="tag">Empresa familiar con más de 45 años</p>
-      </div>
-      <nav class="nav">
-        <a href="https://wa.me/5491136663959" target="_blank" rel="noreferrer">WhatsApp</a>
-    </div>
+    <h1>Plomero Gasista – El Líder</h1>
   </header>
-
-  <section class="hero hero-dark">
-    <div class="carousel">
-      <div class="slide"><img src="images/foto1.jpg" alt="Trabajo 1"></div>
-      <div class="slide"><img src="images/foto2.jpg" alt="Trabajo 2"></div>
-      <div class="slide"><img src="images/foto3.jpg" alt="Trabajo 3"></div>
-      <div class="slide"><img src="images/foto4.jpg" alt="Trabajo 4"></div>
-    </div>
-    <div class="hero-text">
-      <h2>Plomero El Líder — Servicios de agua y gas en CABA</h2>
-      <p>Empresa familiar con más de 45 años de experiencia. Instalaciones y reparaciones de plomería en domicilios, comercios y edificios.</p>
-      <a class="cta" href="https://wa.me/1136663959" target="_blank" rel="noreferrer">Contactar por WhatsApp</a>
-    </div>
+  <section class="redes">
+    <h2>Buscanos en nuestras redes</h2>
+    <p>Facebook e Instagram</p>
   </section>
-
-  <main class="container main-content">
-    <section id="servicios" class="services">
-      <h3>Servicios</h3>
-      <ul>
-        <li>Reparación de pérdidas y filtraciones</li>
-        <li>Cambio de grifería y accesorios</li>
-        <li>Instalación y mantenimiento de sanitarios</li>
-        <li>Instalación de cañerías de agua y desagüe</li>
-        <li>Servicio de gas: termotanques, calefones y cocinas</li>
-        <li>Mantenimiento preventivo</li>
-      </ul>
-    </section>
-
-    <section id="zonas" class="zones">
-      <h3>Zonas de trabajo</h3>
-      <p>Trabajamos en Saavedra, Núñez, Belgrano, Villa Urquiza, Villa Pueyrredón, Vicente López, Olivos, Martínez, Villa Adelina y toda CABA. Consultá disponibilidad.</p>
-    </section>
-
-    <section id="contacto" class="contact">
-      <h3>Contacto</h3>
-      <p>Dirección: Ramallo 2772, CABA</p>
-      <p>WhatsApp / Teléfono: <a href="https://wa.me/1136663959">11 3666-3959</a></p>
-      <div class="socials">
-        <a href="https://www.facebook.com/share/1KFZrLqP61/" target="_blank" rel="noreferrer">Facebook</a> •
-        <a href="https://www.instagram.com/plomero.lider" target="_blank" rel="noreferrer">Instagram</a>
-      </div>
-      <div class="map">
-        <iframe src="https://www.google.com/maps?q=Ramallo+2772+CABA&output=embed" width="100%" height="260" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="container">
-      <p>Plomero El Líder — Empresa familiar con más de 45 años de experiencia. Atención en CABA y alrededores.</p>
-      <p>© Plomero El Líder - 2025</p>
-    </div>
-  </footer>
-
-  <a class="whatsapp-float" href="https://wa.me/1136663959" target="_blank" rel="noreferrer" aria-label="WhatsApp">💬</a>
-
-  <script>
-  (function(){
-    const slides = document.querySelectorAll('.carousel .slide');
-    let cur = 0;
-    function show(i){
-      slides.forEach((s,idx)=> s.style.opacity = (idx===i)? '1' : '0');
-    }
-    function next(){
-      cur = (cur+1) % slides.length;
-      show(cur);
-    }
-    slides.forEach(s=>{
-      s.style.position='absolute';
-      s.style.top=0; s.style.left=0; s.style.width='100%';
-      s.style.transition='opacity 0.8s ease';
-      s.style.opacity='0';
-    });
-    if(slides[0]) slides[0].style.opacity='1';
-    setInterval(next, 3500);
-  })();
-  </script>
 </body>
 </html>
