--- a/index.html
+++ b/index.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Plomero Gasista – El Líder</title>
-  <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Plomero Gasista – El Líder</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="header">
-    <h1>Plomero Gasista – El Líder</h1>
-  </header>
-  <section class="redes">
-    <h2>Buscanos en nuestras redes</h2>
-    <p>Facebook e Instagram</p>
-  </section>
+
+<header class="header">
+  <h1>Plomero Gasista – El Líder</h1>
+  <p>Servicio profesional en agua y gas</p>
+</header>
+
+<section class="redes">
+  <h2>Buscanos en nuestras redes</h2>
+  <div class="iconos">
+    <a href="https://www.facebook.com/share/1KFZrLqP61/" target="_blank">
+      <img src="facebook.png"><span>Facebook</span>
+    </a>
+    <a href="https://www.instagram.com/plomero.lider?igsh=anB2cnVkb3gxMHV2" target="_blank">
+      <img src="instagram.png"><span>Instagram</span>
+    </a>
+  </div>
+</section>
+
+<section class="servicios">
+  <h2>Servicios</h2>
+  <ul>
+    <li>Reparación de pérdidas y filtraciones</li>
+    <li>Cambio y reparación de cañerías</li>
+    <li>Desobstrucciones</li>
+    <li>Instalación de calefones y termotanques</li>
+    <li>Soldaduras y termofusión</li>
+    <li>Instalación y reparación de gas</li>
+  </ul>
+</section>
+
+<section class="zonas">
+  <h2>Zonas de trabajo</h2>
+  <p>CABA y alrededores — Consultar disponibilidad</p>
+</section>
+
+<a href="https://api.whatsapp.com/send?phone=5491136663959" target="_blank">
+  <img class="wpp" src="whatsapp.png">
+</a>
+
 </body>
 </html>
